--- a/public/css/master.css
+++ b/public/css/master.css
@@ -56,15 +56,65 @@ table {
 .grouping:after {
   clear: both;
 }
+
 /* MASTER Style */
 .wrapper {
-  margin: 0 auto;
+	margin: auto 1px;
+	width: auto;
+	height: 1024px;
+	overflow: hidden;
+}
+.container {
   width: 960px;
+	margin: 30px 30px;
+}
+.container input {
+	position: absolute;
+	top: 50%;
+	left: 25%;
+	transform: translate(0, -50%);
+	border: none;
+	background: transparent;
+	border-bottom: 2px solid black;
+	display: block;
+	width: 600px;
+	height: 100px;
+	font-size: 50px;
+}
+.container input:focus {
+	outline: none;
+}
+.bleue {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7abcff+0,60abf8+44,4096ee+100;Blue+3D+%2314 */
+	background: #7abcff; /* Old browsers */
+	background: -moz-linear-gradient(top, #7abcff 0%, #60abf8 44%, #4096ee 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #7abcff 0%,#60abf8 44%,#4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
 }
 
-.column {
-  border: 5px solid black;
-  width: 400px;
-  margin: 0 10px;
+.green {
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#b4e391+0,b4e391+100 */
+	background: #b4e391; /* Old browsers */
+	background: -moz-linear-gradient(top, #b4e391 0%, #b4e391 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top, #b4e391 0%,#b4e391 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom, #b4e391 0%,#b4e391 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b4e391', endColorstr='#b4e391',GradientType=0 ); /* IE6-9 */
+}
+.bubble {
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	width: 350px;
+	height: 150px;
+	font-size: 40px;
+	font-family: sans-serif;
+	text-align: center;
+	opacity: 0.9;
+	background: #fff;
+	border: 1px solid #000;
   float: left;
+	margin: 20px;
+	padding: 50px 0;
+	box-sizing: border-box;
 }
