--- a/public/css/master.css
+++ b/public/css/master.css
@@ -119,6 +119,29 @@ table {
 	box-sizing: border-box;
 }
 
+.code-window {
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	width: 800px;
+	height: 400px;
+	position: absolute;
+	top: 20%;
+	left: 20%;
+}
+
+.code-window button {
+	position: relative;
+	right: 0;
+	left: 50%;
+}
+
+#editor {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
 .hidden {
 	display: none;
 }
